@startuml DebtSettlementService
title L4 — DebtSettlementService (Business Logic)

package "TripSplit.BusinessLogic" {
    interface IDebtSettlementService {
        + CalculateSettlementAsync(tripId: Guid): Task<TripStatistics>
    }

    interface IDebtMinimizationStrategy {
        + Minimize(balances: IReadOnlyDictionary<Guid, decimal>): IReadOnlyList<Transfer>
    }

    interface ITripRepository {
        + GetByIdAsync(id: Guid): Task<Trip?>
    }
    interface IExpenseRepository {
        + GetByTripAsync(tripId: Guid): Task<IReadOnlyList<Expense>>
    }

    class DebtSettlementService {
        - _trips: ITripRepository
        - _expenses: IExpenseRepository
        - _strategy: IDebtMinimizationStrategy
        + DebtSettlementService(trips, expenses, strategy)
        + CalculateSettlementAsync(tripId): Task<TripStatistics>
        - {static} ComputePerUserSpent(expenses): IReadOnlyDictionary<Guid, decimal>
        - {static} ComputeBalances(expenses): IReadOnlyDictionary<Guid, decimal>
    }

    class GreedyDebtMinimizationStrategy {
        - _epsilon: decimal
        + GreedyDebtMinimizationStrategy(options: DebtSettlementOptions)
        + Minimize(balances): IReadOnlyList<Transfer>
    }

    class DebtSettlementOptions <<POCO / Options>> {
        + MinTransferAmount: decimal
    }

    class Transfer <<System Entity>> {
        + FromUserId: Guid
        + ToUserId: Guid
        + Amount: decimal
    }

    class TripStatistics <<System Entity>> {
        + TripId: Guid
        + TotalSpent: decimal
        + PerUserSpent: IReadOnlyDictionary<Guid, decimal>
        + Transfers: IReadOnlyList<Transfer>
    }

    class Trip <<System Entity>>
    class Expense <<System Entity>>
}

package "appsettings.json" <<config>> {
    class "DebtSettlement:MinTransferAmount" as ConfigKey <<config key>>
}

package "TripSplit.Contracts" <<planned>> {
    class TransferDto <<Transport>> {
        + FromUserId: Guid
        + ToUserId: Guid
        + Amount: decimal
    }
    class TripStatisticsDto <<Transport>> {
        + TripId: Guid
        + TotalSpent: decimal
        + PerUserSpent: Dictionary<Guid, decimal>
        + Transfers: TransferDto[]
    }
}

DebtSettlementService ..|> IDebtSettlementService
GreedyDebtMinimizationStrategy ..|> IDebtMinimizationStrategy

DebtSettlementService --> ITripRepository
DebtSettlementService --> IExpenseRepository
DebtSettlementService --> IDebtMinimizationStrategy
DebtSettlementService ..> Trip : reads
DebtSettlementService ..> Expense : reads
DebtSettlementService ..> Transfer : creates
DebtSettlementService ..> TripStatistics : builds

GreedyDebtMinimizationStrategy --> DebtSettlementOptions : injected via DI
DebtSettlementOptions <.. ConfigKey : bound from IConfiguration\nby Composition Root

TripStatistics "1" *-- "*" Transfer
TripStatisticsDto "1" *-- "*" TransferDto

@enduml
